# cann

./: CMakeLists.txt  findings.md  progress.md  task_plan.md
op_host/: CMakeLists.txt  erf.cpp
op_kernel/: CMakeLists.txt  erf.cpp  erf_tiling.h  tiling_key_erf.h
tools/: check_erf_kernel.py
